Atualização translations/texts/plants/grass/ground/drop/floatingcrystal/floatingcrystal.grass.json

--- a/translations/texts/plants/grass/ground/drop/floatingcrystal/floatingcrystal.grass.json
+++ b/translations/texts/plants/grass/ground/drop/floatingcrystal/floatingcrystal.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A mysterious floating crystal."
+      "Eng": "A mysterious floating crystal.",
+      "Por": "Um cristal flutuante misterioso."
     }
   }
 ]
