--- a/translations/texts/plants/grass/ground/drop/puffplant/puffplant.grass.json
+++ b/translations/texts/plants/grass/ground/drop/puffplant/puffplant.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A puffball."
+      "Eng": "A puffball.",
+      "Por": "Um puffball."
     }
   }
 ]
