--- a/translations/texts/plants/grass/ground/drop/sulphurplant/sulphurplant.grass.json
+++ b/translations/texts/plants/grass/ground/drop/sulphurplant/sulphurplant.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A sulphur plant."
+      "Eng": "A sulphur plant.",
+      "Por": "Uma planta de enxofre."
     }
   }
 ]
