--- a/translations/texts/plants/grass/ground/decorative/bell/bell.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/bell/bell.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A bellflower."
+      "Eng": "A bellflower.",
+      "Por": "Uma campânula."
     }
   }
 ]
