--- a/translations/texts/plants/grass/ground/decorative/blueslime/blueslime.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/blueslime/blueslime.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A slimy root."
+      "Eng": "A slimy root.",
+      "Por": "Uma raiz viscosa."
     }
   }
 ]
