--- a/translations/texts/plants/grass/ground/decorative/circles/circles.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/circles/circles.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A plant with berries."
+      "Eng": "A plant with berries.",
+      "Por": "Uma planta com bagas."
     }
   }
 ]
