--- a/translations/texts/plants/grass/ground/decorative/colourfulflower/colourfulflower.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/colourfulflower/colourfulflower.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A colourful spiral flower."
+      "Eng": "A colourful spiral flower.",
+      "Por": "Uma flor espiral colorida."
     }
   }
 ]
