--- a/translations/texts/plants/grass/ground/decorative/crisp/crisp.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/crisp/crisp.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A crispy root."
+      "Eng": "A crispy root.",
+      "Por": "Uma raiz crocante."
     }
   }
 ]
