--- a/translations/texts/plants/grass/ground/decorative/curlythorns/curlythorns.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/curlythorns/curlythorns.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sharp thorns."
+      "Eng": "Sharp thorns.",
+      "Por": "Espinhos afiados."
     }
   }
 ]
