--- a/translations/texts/plants/grass/ground/decorative/cutter/cutter.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/cutter/cutter.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A sharp plant."
+      "Eng": "A sharp plant.",
+      "Por": "Uma planta afiada."
     }
   }
 ]
