--- a/translations/texts/plants/grass/ground/decorative/dandy/dandy.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/dandy/dandy.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A dandelion."
+      "Eng": "A dandelion.",
+      "Por": "Um dente-de-leão."
     }
   }
 ]
