--- a/translations/texts/plants/grass/ground/decorative/diamond/diamond.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/diamond/diamond.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A diamond flower."
+      "Eng": "A diamond flower.",
+      "Por": "Uma flor de diamante."
     }
   }
 ]
