--- a/translations/texts/plants/grass/ground/decorative/fireflower/fireflower.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/fireflower/fireflower.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A fire flower."
+      "Eng": "A fire flower.",
+      "Por": "Uma flor de fogo."
     }
   }
 ]
