Atualização translations/texts/plants/grass/ground/decorative/glowmushroom/glowmushroom.grass.json

--- a/translations/texts/plants/grass/ground/decorative/glowmushroom/glowmushroom.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/glowmushroom/glowmushroom.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A glowing mushroom."
+      "Eng": "A glowing mushroom.",
+      "Por": "Um cogumelo brilhante."
     }
   }
 ]
