--- a/translations/texts/plants/grass/ground/decorative/leafsy/leafsy.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/leafsy/leafsy.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A leafy plant."
+      "Eng": "A leafy plant.",
+      "Por": "Uma planta folhosa."
     }
   }
 ]
