--- a/translations/texts/plants/grass/ground/decorative/rockstacks/rockstacks.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/rockstacks/rockstacks.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A pile of rocks."
+      "Eng": "A pile of rocks.",
+      "Por": "Uma pilha de pedras."
     }
   }
 ]
