Atualização translations/texts/plants/grass/ground/decorative/rustflower/rustflower.grass.json

--- a/translations/texts/plants/grass/ground/decorative/rustflower/rustflower.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/rustflower/rustflower.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A metallic flower."
+      "Eng": "A metallic flower.",
+      "Por": "Uma flor metálica."
     }
   }
 ]
