Atualização translations/texts/plants/grass/ground/decorative/shadowy/shadowy.grass.json

--- a/translations/texts/plants/grass/ground/decorative/shadowy/shadowy.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/shadowy/shadowy.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A mysterious flower."
+      "Eng": "A mysterious flower.",
+      "Por": "Uma flor misteriosa."
     }
   }
 ]
