Atualização translations/texts/plants/grass/ground/decorative/shared_jungle/shared_jungle.json

--- a/translations/texts/plants/grass/ground/decorative/shared_jungle/shared_jungle.json
+++ b/translations/texts/plants/grass/ground/decorative/shared_jungle/shared_jungle.json
@@ -16,7 +16,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A jungle flower."
+      "Eng": "A jungle flower.",
+      "Por": "Uma flor da selva."
     }
   }
 ]
