Atualização translations/texts/plants/grass/ground/decorative/shared_magmaflower/shared_magmaflower.json

--- a/translations/texts/plants/grass/ground/decorative/shared_magmaflower/shared_magmaflower.json
+++ b/translations/texts/plants/grass/ground/decorative/shared_magmaflower/shared_magmaflower.json
@@ -19,7 +19,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Magma flower."
+      "Eng": "Magma flower.",
+      "Por": "Flor de magma."
     }
   }
 ]
