Atualização translations/texts/plants/grass/ground/decorative/shared_pod/shared_.grass.json

--- a/translations/texts/plants/grass/ground/decorative/shared_pod/shared_.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/shared_pod/shared_.grass.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Small pod."
+      "Eng": "Small pod.",
+      "Por": "Vagem pequena."
     }
   }
 ]
