Atualização translations/texts/plants/grass/ground/decorative/shared_waterplant/shared_waterplant.json

--- a/translations/texts/plants/grass/ground/decorative/shared_waterplant/shared_waterplant.json
+++ b/translations/texts/plants/grass/ground/decorative/shared_waterplant/shared_waterplant.json
@@ -13,7 +13,8 @@
       ]
     },
     "Texts": {
-      "Eng": "An underwater plant."
+      "Eng": "An underwater plant.",
+      "Por": "Uma planta subaquática."
     }
   }
 ]
