--- a/translations/texts/plants/grass/ground/decorative/signplant/signplant.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/signplant/signplant.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A strange plant."
+      "Eng": "A strange plant.",
+      "Por": "Uma planta estranha."
     }
   }
 ]
