Atualização translations/texts/plants/grass/ground/decorative/skeletonflower/skeletonflower.grass.json

--- a/translations/texts/plants/grass/ground/decorative/skeletonflower/skeletonflower.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/skeletonflower/skeletonflower.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A skeletal flower."
+      "Eng": "A skeletal flower.",
+      "Por": "Uma flor esquelética."
     }
   }
 ]
