--- a/translations/texts/plants/grass/ground/decorative/slime/slime.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/slime/slime.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sticky slime."
+      "Eng": "Sticky slime.",
+      "Por": "Lodo pegajoso."
     }
   }
 ]
