--- a/translations/texts/plants/grass/ground/decorative/smallvillage/smallvillage.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/smallvillage/smallvillage.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Little Trees."
+      "Eng": "Little Trees.",
+      "Por": "Arvorezinhas."
     }
   }
 ]
