--- a/translations/texts/plants/grass/ground/decorative/spikes/spikes.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/spikes/spikes.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Natural spikes."
+      "Eng": "Natural spikes.",
+      "Por": "Espinhos naturais."
     }
   }
 ]
