Atualização translations/texts/plants/grass/ground/decorative/spire/spire.grass.json

--- a/translations/texts/plants/grass/ground/decorative/spire/spire.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/spire/spire.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A spiralling spiky plant."
+      "Eng": "A spiralling spiky plant.",
+      "Por": "Uma planta espinhosa espiral."
     }
   }
 ]
