--- a/translations/texts/plants/grass/ground/decorative/springy/springy.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/springy/springy.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A springy plant."
+      "Eng": "A springy plant.",
+      "Por": "Uma planta de primavera."
     }
   }
 ]
