--- a/translations/texts/plants/grass/ground/decorative/sprout/sprout.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/sprout/sprout.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A little sprout."
+      "Eng": "A little sprout.",
+      "Por": "Um brotinho."
     }
   }
 ]
