--- a/translations/texts/plants/grass/ground/decorative/strange/strange.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/strange/strange.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A bizarre plant."
+      "Eng": "A bizarre plant.",
+      "Por": "Uma planta bizarra."
     }
   }
 ]
