Atualização translations/texts/plants/grass/ground/decorative/sunflower/sunflower.grass.json

--- a/translations/texts/plants/grass/ground/decorative/sunflower/sunflower.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/sunflower/sunflower.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A beautiful sunflower."
+      "Eng": "A beautiful sunflower.",
+      "Por": "Um lindo girassol."
     }
   }
 ]
