--- a/translations/texts/plants/grass/ground/decorative/tar/tar.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/tar/tar.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sticky tar."
+      "Eng": "Sticky tar.",
+      "Por": "Piche pegajoso."
     }
   }
 ]
