Atualização translations/texts/plants/grass/ground/decorative/testflower8/testflower8.grass.json

--- a/translations/texts/plants/grass/ground/decorative/testflower8/testflower8.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/testflower8/testflower8.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A hideous flower."
+      "Eng": "A hideous flower.",
+      "Por": "Uma flor medonha."
     }
   }
 ]
