--- a/translations/texts/plants/grass/ground/decorative/thickgrass/thickgrass.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/thickgrass/thickgrass.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thick grass."
+      "Eng": "Thick grass.",
+      "Por": "Grama grossa."
     }
   }
 ]
