Atualização translations/texts/plants/grass/ground/decorative/thinstem/thinstem.grass.json

--- a/translations/texts/plants/grass/ground/decorative/thinstem/thinstem.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/thinstem/thinstem.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "A thin shrub."
+      "Eng": "A thin shrub.",
+      "Por": "Um arbusto fino."
     }
   }
 ]
