--- a/translations/texts/plants/grass/ground/decorative/tiberia/tiberia.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/tiberia/tiberia.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Strange growth."
+      "Eng": "Strange growth.",
+      "Por": "Crescimento estranho."
     }
   }
 ]
