--- a/translations/texts/plants/grass/ground/decorative/toxicplains/toxicplains.grass.json
+++ b/translations/texts/plants/grass/ground/decorative/toxicplains/toxicplains.grass.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic plants."
+      "Eng": "Toxic plants.",
+      "Por": "Plantas tóxicas."
     }
   }
 ]
