--- a/translations/texts/items/fossils/humanoid/alpacafossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/alpacafossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alpaca Skull"
+      "Eng": "Alpaca Skull",
+      "Por": "Crânio de Alpaca"
     }
   }
 ]
