--- a/translations/texts/items/fossils/humanoid/alpacafossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/alpacafossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alpaca Torso"
+      "Eng": "Alpaca Torso",
+      "Por": "Torso de Alpaca"
     }
   }
 ]
