Atualização translations/texts/items/fossils/humanoid/alpacafossil3.item.json

--- a/translations/texts/items/fossils/humanoid/alpacafossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/alpacafossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alpaca Legs"
+      "Eng": "Alpaca Legs",
+      "Por": "Pernas de Alpaca"
     }
   }
 ]
