--- a/translations/texts/items/fossils/humanoid/apexfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/apexfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Apex Skull"
+      "Eng": "Apex Skull",
+      "Por": "Crânio de Apex"
     }
   }
 ]
