Atualização translations/texts/items/fossils/humanoid/avianfossil1.item.json

--- a/translations/texts/items/fossils/humanoid/avianfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/avianfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Skull"
+      "Eng": "Avian Skull",
+      "Por": "Crânio de Avian"
     }
   }
 ]
