--- a/translations/texts/items/fossils/humanoid/avianfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/avianfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Torso"
+      "Eng": "Avian Torso",
+      "Por": "Torso de Avian"
     }
   }
 ]
