--- a/translations/texts/items/fossils/humanoid/avianfossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/avianfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian Legs"
+      "Eng": "Avian Legs",
+      "Por": "Pernas de Avian"
     }
   }
 ]
