--- a/translations/texts/items/fossils/humanoid/avioscalefossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/avioscalefossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avioscale Skull"
+      "Eng": "Avioscale Skull",
+      "Por": "Crânio de Avioscale"
     }
   }
 ]
