--- a/translations/texts/items/fossils/humanoid/avioscalefossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/avioscalefossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avioscale Torso"
+      "Eng": "Avioscale Torso",
+      "Por": "Torso de Avioscale"
     }
   }
 ]
