--- a/translations/texts/items/fossils/humanoid/avioscalefossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/avioscalefossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avioscale Legs"
+      "Eng": "Avioscale Legs",
+      "Por": "Pernas de Avioscale"
     }
   }
 ]
