--- a/translations/texts/items/fossils/humanoid/floaranfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/floaranfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floran Skull"
+      "Eng": "Floran Skull",
+      "Por": "Crânio de Floran"
     }
   }
 ]
