Atualização translations/texts/items/fossils/humanoid/floranfossil2.item.json

--- a/translations/texts/items/fossils/humanoid/floranfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/floranfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floran Torso"
+      "Eng": "Floran Torso",
+      "Por": "Torso de Floran"
     }
   }
 ]
