Atualização translations/texts/items/fossils/humanoid/floranfossil3.item.json

--- a/translations/texts/items/fossils/humanoid/floranfossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/floranfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Floran Legs"
+      "Eng": "Floran Legs",
+      "Por": "Pernas de Floran"
     }
   }
 ]
