--- a/translations/texts/items/fossils/humanoid/froggfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/froggfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frogg Skull"
+      "Eng": "Frogg Skull",
+      "Por": "Crânio de Sapo"
     }
   }
 ]
