--- a/translations/texts/items/fossils/humanoid/froggfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/froggfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frogg Torso"
+      "Eng": "Frogg Torso",
+      "Por": "Torso de Sapo"
     }
   }
 ]
