--- a/translations/texts/items/fossils/humanoid/glitchfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/glitchfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glitch Head"
+      "Eng": "Glitch Head",
+      "Por": "Cabeça de Glitch"
     }
   }
 ]
