--- a/translations/texts/items/fossils/humanoid/glitchfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/glitchfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glitch Torso"
+      "Eng": "Glitch Torso",
+      "Por": "Torso de Glitch"
     }
   }
 ]
