Atualização translations/texts/items/fossils/humanoid/glitchfossil3.item.json

--- a/translations/texts/items/fossils/humanoid/glitchfossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/glitchfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glitch Legs"
+      "Eng": "Glitch Legs",
+      "Por": "Pernas de Glitch"
     }
   }
 ]
