Atualização translations/texts/items/fossils/humanoid/humanfossil1.item.json

--- a/translations/texts/items/fossils/humanoid/humanfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/humanfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Human Skull"
+      "Eng": "Human Skull",
+      "Por": "Crânio de Humano"
     }
   }
 ]
