Atualização translations/texts/items/fossils/humanoid/humanfossil2.item.json

--- a/translations/texts/items/fossils/humanoid/humanfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/humanfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Human Torso"
+      "Eng": "Human Torso",
+      "Por": "Torso de Humano"
     }
   }
 ]
