--- a/translations/texts/items/fossils/humanoid/humanfossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/humanfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Human Legs"
+      "Eng": "Human Legs",
+      "Por": "Pernas de Humano"
     }
   }
 ]
