--- a/translations/texts/items/fossils/humanoid/hylotlfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/hylotlfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hylotl Skull"
+      "Eng": "Hylotl Skull",
+      "Por": "Crânio de Hylotl"
     }
   }
 ]
