--- a/translations/texts/items/fossils/humanoid/hylotlfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/hylotlfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hylotl Torso"
+      "Eng": "Hylotl Torso",
+      "Por": "Torso de Hylotl"
     }
   }
 ]
