--- a/translations/texts/items/fossils/humanoid/hylotlfossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/hylotlfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hylotl Legs"
+      "Eng": "Hylotl Legs",
+      "Por": "Pernas de Hylotl"
     }
   }
 ]
