--- a/translations/texts/items/fossils/humanoid/mysteriousfossil1.item.json
+++ b/translations/texts/items/fossils/humanoid/mysteriousfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unidentified Skull"
+      "Eng": "Unidentified Skull",
+      "Por": "Crânio Não Identificado"
     }
   }
 ]
