--- a/translations/texts/items/fossils/humanoid/mysteriousfossil2.item.json
+++ b/translations/texts/items/fossils/humanoid/mysteriousfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unidentified Torso"
+      "Eng": "Unidentified Torso",
+      "Por": "Torso Não Identificado"
     }
   }
 ]
