--- a/translations/texts/items/fossils/humanoid/mysteriousfossil3.item.json
+++ b/translations/texts/items/fossils/humanoid/mysteriousfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unidentified Legs"
+      "Eng": "Unidentified Legs",
+      "Por": "Pernas Não Identificadas"
     }
   }
 ]
