--- a/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil1.item.json
+++ b/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ixodoom Skull"
+      "Eng": "Ixodoom Skull",
+      "Por": "Crânio de Ixodoom"
     }
   }
 ]
