Atualização translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil2.item.json

--- a/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil2.item.json
+++ b/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ixodoom Torso"
+      "Eng": "Ixodoom Torso",
+      "Por": "Torso de Ixodoom"
     }
   }
 ]
