--- a/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil3.item.json
+++ b/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ixodoom Spine"
+      "Eng": "Ixodoom Spine",
+      "Por": "Espinha de Ixodoom"
     }
   }
 ]
