Atualização translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil4.item.json

--- a/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil4.item.json
+++ b/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil4.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ixodoom Hips"
+      "Eng": "Ixodoom Hips",
+      "Por": "Quadril de Ixodoom"
     }
   }
 ]
