--- a/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil5.item.json
+++ b/translations/texts/items/fossils/large/ixodoomfossil/ixodoomfossil5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ixodoom Stinger"
+      "Eng": "Ixodoom Stinger",
+      "Por": "Ferrão de Ixodoom"
     }
   }
 ]
