--- a/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil1.item.json
+++ b/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ophidaunt Skull;"
+      "Eng": "Ophidaunt Skull;",
+      "Por": "Crânio de Ophidaunt"
     }
   }
 ]
