--- a/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil2.item.json
+++ b/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ophidaunt Torso"
+      "Eng": "Ophidaunt Torso",
+      "Por": "Torso de Ophidaunt"
     }
   }
 ]
