--- a/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil3.item.json
+++ b/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ophidaunt Upper Tail"
+      "Eng": "Ophidaunt Upper Tail",
+      "Por": "Cauda Superior de Ophidaunt"
     }
   }
 ]
