Atualização translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil4.item.json

--- a/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil4.item.json
+++ b/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil4.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ophidaunt Mid Tail"
+      "Eng": "Ophidaunt Mid Tail",
+      "Por": "Cauda Média de Ophidaunt"
     }
   }
 ]
