Atualização translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil4.item.json

--- a/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil4.item.json
+++ b/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil4.item.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Ophidaunt Mid Tail",
-      "Por": "Cauda Média de Ophidaunt"
+      "Por": "Cauda do Meio de Ophidaunt"
     }
   }
 ]
