Atualização translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil5.item.json

--- a/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil5.item.json
+++ b/translations/texts/items/fossils/large/ophidauntfossil/ophidauntfossil5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ophidaunt Lower Tail"
+      "Eng": "Ophidaunt Lower Tail",
+      "Por": "Cauda Inferior de Ophidaunt"
     }
   }
 ]
