--- a/translations/texts/items/fossils/large/trexfossil/trexfossil1.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil1.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T-Rex Skull"
+      "Eng": "T-Rex Skull",
+      "Por": "Crânio de T-Rex"
     }
   }
 ]
