--- a/translations/texts/items/fossils/large/trexfossil/trexfossil2.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T-Rex Torso"
+      "Eng": "T-Rex Torso",
+      "Por": "Torso de T-Rex"
     }
   }
 ]
