--- a/translations/texts/items/fossils/large/trexfossil/trexfossil4.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil4.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T-Rex Upper Tail;"
+      "Eng": "T-Rex Upper Tail;",
+      "Por": "Cauda Superior de T-Rex"
     }
   }
 ]
