--- a/translations/texts/items/fossils/large/trexfossil/trexfossil5.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T-Rex Lower Tail"
+      "Eng": "T-Rex Lower Tail",
+      "Por": "Cauda Inferior de T-Rex"
     }
   }
 ]
