--- a/translations/texts/items/fossils/small/fernfossil.item.json
+++ b/translations/texts/items/fossils/small/fernfossil.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fern Fossil"
+      "Eng": "Fern Fossil",
+      "Por": "Fóssil de Samambaia"
     }
   }
 ]
