--- a/translations/texts/items/fossils/small/fishfossil.item.json
+++ b/translations/texts/items/fossils/small/fishfossil.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fish Fossil"
+      "Eng": "Fish Fossil",
+      "Por": "Fóssil de Peixe"
     }
   }
 ]
