--- a/translations/texts/items/fossils/small/mysteriousalienfossil.item.json
+++ b/translations/texts/items/fossils/small/mysteriousalienfossil.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mysterious Alien Skull"
+      "Eng": "Mysterious Alien Skull",
+      "Por": "Crânio Alienígena Misterioso"
     }
   }
 ]
