Atualização translations/texts/items/fossils/small/penguinfossil.item.json

--- a/translations/texts/items/fossils/small/penguinfossil.item.json
+++ b/translations/texts/items/fossils/small/penguinfossil.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Penguin Fossil"
+      "Eng": "Penguin Fossil",
+      "Por": "Fóssil de Pinguim"
     }
   }
 ]
