Atualização translations/texts/items/fossils/small/sabertoothfossil.item.json

--- a/translations/texts/items/fossils/small/sabertoothfossil.item.json
+++ b/translations/texts/items/fossils/small/sabertoothfossil.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sabertooth Skull"
+      "Eng": "Sabertooth Skull",
+      "Por": "Crânio de Dente de Sabre"
     }
   }
 ]
