--- a/translations/texts/items/fossils/small/trackfossil.item.json
+++ b/translations/texts/items/fossils/small/trackfossil.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Footprint Fossil"
+      "Eng": "Footprint Fossil",
+      "Por": "Fóssil de Pegada"
     }
   }
 ]
