Atualização translations/texts/items/armors/protectorate/protectorateshirt/protectorateshirt.chest.json

--- a/translations/texts/items/armors/protectorate/protectorateshirt/protectorateshirt.chest.json
+++ b/translations/texts/items/armors/protectorate/protectorateshirt/protectorateshirt.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protectorate T-Shirt"
+      "Eng": "Protectorate T-Shirt",
+      "Por": "Camiseta do Protetorado"
     }
   }
 ]
