--- a/translations/texts/items/armors/protectorate/protectorateuniform/protectorate.chest.json
+++ b/translations/texts/items/armors/protectorate/protectorateuniform/protectorate.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protectorate Shirt"
+      "Eng": "Protectorate Shirt",
+      "Por": "Camisa do Protetorado"
     }
   }
 ]
