Atualização translations/texts/items/armors/protectorate/protectorateuniform/protectorate.legs.json

--- a/translations/texts/items/armors/protectorate/protectorateuniform/protectorate.legs.json
+++ b/translations/texts/items/armors/protectorate/protectorateuniform/protectorate.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protectorate Trousers"
+      "Eng": "Protectorate Trousers",
+      "Por": "Calças do Protetorado"
     }
   }
 ]
