Atualização translations/texts/items/armors/protectorate/protectoratevest/protectoratevest.chest.json

--- a/translations/texts/items/armors/protectorate/protectoratevest/protectoratevest.chest.json
+++ b/translations/texts/items/armors/protectorate/protectoratevest/protectoratevest.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Protectorate Vest"
+      "Eng": "Protectorate Vest",
+      "Por": "Colete do Protetorado"
     }
   }
 ]
