--- a/translations/texts/items/armors/protectorate/raggedprotectoratecape/raggedprotectoratecape.back.json
+++ b/translations/texts/items/armors/protectorate/raggedprotectoratecape/raggedprotectoratecape.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Torn Protectorate Cape"
+      "Eng": "Torn Protectorate Cape",
+      "Por": "Capa do Protetorado Rasgada"
     }
   }
 ]
