Atualização translations/texts/objects/shared_.object.json

--- a/translations/texts/objects/shared_.object.json
+++ b/translations/texts/objects/shared_.object.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pressure Plate"
+      "Eng": "Pressure Plate",
+      "Por": "Placa de Pressão"
     }
   }
 ]
