Atualização translations/texts/objects/shared_cabinet/shared_cabinet.json

--- a/translations/texts/objects/shared_cabinet/shared_cabinet.json
+++ b/translations/texts/objects/shared_cabinet/shared_cabinet.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Metal Cabinet"
+      "Eng": "Metal Cabinet",
+      "Por": "Armário de Metal"
     }
   }
 ]
