Atualização translations/texts/objects/shared_classicdesk/shared_classicdesk.object.json

--- a/translations/texts/objects/shared_classicdesk/shared_classicdesk.object.json
+++ b/translations/texts/objects/shared_classicdesk/shared_classicdesk.object.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Classic Desk"
+      "Eng": "Classic Desk",
+      "Por": "Escrivaninha Clássica"
     }
   }
 ]
