--- a/translations/texts/objects/shared_generator/shared_generator.object.json
+++ b/translations/texts/objects/shared_generator/shared_generator.object.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shield Generator"
+      "Eng": "Shield Generator",
+      "Por": "Gerador de Escudo"
     }
   }
 ]
