Atualização translations/texts/objects/shared_liquidsensor/shared_liquidsensor.object.json

--- a/translations/texts/objects/shared_liquidsensor/shared_liquidsensor.object.json
+++ b/translations/texts/objects/shared_liquidsensor/shared_liquidsensor.object.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Liquid Sensor"
+      "Eng": "Liquid Sensor",
+      "Por": "Sensor de Líquidos"
     }
   }
 ]
