Atualização translations/texts/objects/shared_sink/shared_sink.object.json

--- a/translations/texts/objects/shared_sink/shared_sink.object.json
+++ b/translations/texts/objects/shared_sink/shared_sink.object.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bathroom Sink"
+      "Eng": "Bathroom Sink",
+      "Por": "Pia de Banheiro"
     }
   }
 ]
