--- a/translations/texts/objects/shared_wallbutton/shared_wallbutton.json
+++ b/translations/texts/objects/shared_wallbutton/shared_wallbutton.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Small Wall Button"
+      "Eng": "Small Wall Button",
+      "Por": "Botão de Parede Pequeno"
     }
   }
 ]
