Atualização translations/texts/objects/shared_water/shared_.object.json

--- a/translations/texts/objects/shared_water/shared_.object.json
+++ b/translations/texts/objects/shared_water/shared_.object.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Water Cooler"
+      "Eng": "Water Cooler",
+      "Por": "Bebedouro"
     }
   }
 ]
