Atualização translations/texts/objects/shared_woodencrate/shared_woodencrate.json

--- a/translations/texts/objects/shared_woodencrate/shared_woodencrate.json
+++ b/translations/texts/objects/shared_woodencrate/shared_woodencrate.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Large Wooden Crate"
+      "Eng": "Large Wooden Crate",
+      "Por": "Caixa de Madeira Grande"
     }
   }
 ]
