--- a/translations/texts/shared_polygonplatform.mat.json
+++ b/translations/texts/shared_polygonplatform.mat.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Polygon Platform"
+      "Eng": "Polygon Platform",
+      "Por": "Plataforma Polígona"
     }
   }
 ]
