Atualização translations/texts/shared_laser.json

--- a/translations/texts/shared_laser.json
+++ b/translations/texts/shared_laser.json
@@ -10,7 +10,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mining Laser"
+      "Eng": "Mining Laser",
+      "Por": "Laser de Mineração"
     }
   }
 ]
