Atualização translations/texts/items/active/unsorted/audiodisc/audiodisc.activeitem.json

--- a/translations/texts/items/active/unsorted/audiodisc/audiodisc.activeitem.json
+++ b/translations/texts/items/active/unsorted/audiodisc/audiodisc.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Audio Data Disc"
+      "Eng": "Audio Data Disc",
+      "Por": "Disco de Dados de Áudio"
     }
   }
 ]
