Atualização translations/texts/items/active/unsorted/papernote/papernote.activeitem.json

--- a/translations/texts/items/active/unsorted/papernote/papernote.activeitem.json
+++ b/translations/texts/items/active/unsorted/papernote/papernote.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Handwritten Note"
+      "Eng": "Handwritten Note",
+      "Por": "Nota Escrita a Mão"
     }
   }
 ]
