Atualização translations/texts/items/active/vehiclecontroller/sportscarcontrollerred.activeitem.json

--- a/translations/texts/items/active/vehiclecontroller/sportscarcontrollerred.activeitem.json
+++ b/translations/texts/items/active/vehiclecontroller/sportscarcontrollerred.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Red Sports Car Controller"
+      "Eng": "Red Sports Car Controller",
+      "Por": "Controlador de Carro Esportivo Vermelho"
     }
   }
 ]
