Atualização translations/texts/items/active/weapons/npc/npcgangbroadsword.activeitem.json

--- a/translations/texts/items/active/weapons/npc/npcgangbroadsword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcgangbroadsword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Gang Weapon"
+      "Eng": "NPC Gang Weapon",
+      "Por": "Arma de NPC de Gangue"
     }
   }
 ]
