--- a/translations/texts/items/active/weapons/ranged/unrand/gluesprayer/gluesprayer.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/gluesprayer/gluesprayer.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glue Sprayer"
+      "Eng": "Glue Sprayer",
+      "Por": "Pulverizador de Cola"
     }
   }
 ]
