--- a/translations/texts/items/active/weapons/ranged/unrand/neomagnum/neomagnum2.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/neomagnum/neomagnum2.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neo Magnum-E78"
+      "Eng": "Neo Magnum-E78",
+      "Por": "Neo Magnum-E78"
     }
   }
 ]
