--- a/translations/texts/items/active/weapons/ranged/unrand/neomagnum/neomagnum3.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/neomagnum/neomagnum3.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neo Magnum-RX"
+      "Eng": "Neo Magnum-RX",
+      "Por": "Neo Magnum-RX"
     }
   }
 ]
