Atualização translations/texts/items/active/weapons/ranged/unrand/neoshotgun/neoshotgun.activeitem.json

--- a/translations/texts/items/active/weapons/ranged/unrand/neoshotgun/neoshotgun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/neoshotgun/neoshotgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neo Shotgun"
+      "Eng": "Neo Shotgun",
+      "Por": "Neo Espingarda"
     }
   }
 ]
