--- a/translations/texts/items/active/weapons/ranged/unrand/neotommygun/neotommygun.activeitem.json
+++ b/translations/texts/items/active/weapons/ranged/unrand/neotommygun/neotommygun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neo Tommy Gun"
+      "Eng": "Neo Tommy Gun",
+      "Por": "Neo Thompson"
     }
   }
 ]
