--- a/translations/texts/items/augments/back/peacekeeper1.augment.json
+++ b/translations/texts/items/augments/back/peacekeeper1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peacekeeper I Augment"
+      "Eng": "Peacekeeper I Augment",
+      "Por": "Aprimoramento de Pacificador I"
     }
   }
 ]
