--- a/translations/texts/items/augments/back/peacekeeper2.augment.json
+++ b/translations/texts/items/augments/back/peacekeeper2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peacekeeper II Augment"
+      "Eng": "Peacekeeper II Augment",
+      "Por": "Aprimoramento de Pacificador II"
     }
   }
 ]
