--- a/translations/texts/items/fossils/large/trexfossil/trexfossil2.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil2.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T. rex Torso"
+      "Eng": "T. rex Torso",
+      "Por": "Tronco de T. rex"
     }
   }
 ]
