--- a/translations/texts/items/fossils/large/trexfossil/trexfossil3.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil3.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T. rex Legs"
+      "Eng": "T. rex Legs",
+      "Por": "Pernas de T. rex"
     }
   }
 ]
