--- a/translations/texts/items/fossils/large/trexfossil/trexfossil4.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil4.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T. rex Upper Tail"
+      "Eng": "T. rex Upper Tail",
+      "Por": "Cauda Superior de T. rex"
     }
   }
 ]
