--- a/translations/texts/items/fossils/large/trexfossil/trexfossil5.item.json
+++ b/translations/texts/items/fossils/large/trexfossil/trexfossil5.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "T. rex Lower Tail"
+      "Eng": "T. rex Lower Tail",
+      "Por": "Cauda Inferior de T. rex"
     }
   }
 ]
