--- a/translations/texts/items/generic/mechparts/arm/mecharmneolaser.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmneolaser.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Neo Laser Mech Arm"
+      "Eng": "Neo Laser Mech Arm",
+      "Por": "Braço de Mecha Neo Laser"
     }
   }
 ]
