--- a/translations/texts/items/generic/mechparts/arm/mecharmsoluskatana.item.json
+++ b/translations/texts/items/generic/mechparts/arm/mecharmsoluskatana.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Solus Katana Mech Arm"
+      "Eng": "Solus Katana Mech Arm",
+      "Por": "Braço de Mecha Solus Katana"
     }
   }
 ]
