--- a/translations/texts/items/generic/mechparts/body/mechbodypeacekeeper.item.json
+++ b/translations/texts/items/generic/mechparts/body/mechbodypeacekeeper.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peacekeeper Mech Body"
+      "Eng": "Peacekeeper Mech Body",
+      "Por": "Corpo de Mecha do Pacificador"
     }
   }
 ]
