Atualização translations/texts/items/generic/other/peacecredit.item.json

--- a/translations/texts/items/generic/other/peacecredit.item.json
+++ b/translations/texts/items/generic/other/peacecredit.item.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peace Credit"
+      "Eng": "Peace Credit",
+      "Por": "Crédito da Paz"
     }
   }
 ]
