Atualização translations/texts/tiles/materials/slopedpolygon.material.json

--- a/translations/texts/tiles/materials/slopedpolygon.material.json
+++ b/translations/texts/tiles/materials/slopedpolygon.material.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Polygon Panel"
+      "Eng": "Polygon Panel",
+      "Por": "Painel Polígonal"
     }
   }
 ]
