--- a/translations/texts/items/armors/apex/apex-tier1/apextier1.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier1/apextier1.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Defector's Chestguard"
+      "Eng": "Defector's Chestguard",
+      "Por": "Couraça do Defetor"
     }
   }
 ]
