--- a/translations/texts/items/armors/apex/apex-tier1/apextier1.head.json
+++ b/translations/texts/items/armors/apex/apex-tier1/apextier1.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Defector's Mask"
+      "Eng": "Defector's Mask",
+      "Por": "Máscara do Desertor"
     }
   }
 ]
