Atualização translations/texts/items/armors/apex/apex-tier1/apextier1.chest.json

--- a/translations/texts/items/armors/apex/apex-tier1/apextier1.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier1/apextier1.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Defector's Chestguard",
-      "Por": "Couraça do Defetor"
+      "Por": "Couraça do Desertor"
     }
   }
 ]
