Atualização translations/texts/items/armors/apex/apex-tier1/apextier1.legs.json

--- a/translations/texts/items/armors/apex/apex-tier1/apextier1.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier1/apextier1.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Defector's Trousers"
+      "Eng": "Defector's Trousers",
+      "Por": "Calças do Desertor"
     }
   }
 ]
