Atualização translations/texts/items/armors/apex/apex-tier2/apextier2.chest.json

--- a/translations/texts/items/armors/apex/apex-tier2/apextier2.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier2/apextier2.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rebel's Chestguard"
+      "Eng": "Rebel's Chestguard",
+      "Por": "Couraça do Rebelde"
     }
   }
 ]
