--- a/translations/texts/items/armors/apex/apex-tier2/apextier2.head.json
+++ b/translations/texts/items/armors/apex/apex-tier2/apextier2.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rebel's Hood"
+      "Eng": "Rebel's Hood",
+      "Por": "Capuz de Rebelde"
     }
   }
 ]
