--- a/translations/texts/items/armors/apex/apex-tier2/apextier2.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier2/apextier2.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rebel's Trousers"
+      "Eng": "Rebel's Trousers",
+      "Por": "Calças de Rebelde"
     }
   }
 ]
