--- a/translations/texts/items/armors/apex/apex-tier3/apextier3.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier3/apextier3.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Insurgent's Jacket"
+      "Eng": "Insurgent's Jacket",
+      "Por": "Casaco do Insurgente"
     }
   }
 ]
