--- a/translations/texts/items/armors/apex/apex-tier3/apextier3.head.json
+++ b/translations/texts/items/armors/apex/apex-tier3/apextier3.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Insurgent's Mask"
+      "Eng": "Insurgent's Mask",
+      "Por": "Máscara do Insurgente"
     }
   }
 ]
