Atualização translations/texts/items/armors/apex/apex-tier3/apextier3.legs.json

--- a/translations/texts/items/armors/apex/apex-tier3/apextier3.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier3/apextier3.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Insurgent's Trousers"
+      "Eng": "Insurgent's Trousers",
+      "Por": "Calças do Insurgente"
     }
   }
 ]
