Atualização translations/texts/items/armors/apex/apex-tier2/apextier2.chest.json

--- a/translations/texts/items/armors/apex/apex-tier2/apextier2.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier2/apextier2.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Rebel's Chestguard",
-      "Por": "Couraça de Rebelde"
+      "Por": "Couraça do Rebelde"
     }
   }
 ]
