Atualização translations/texts/items/armors/apex/apex-tier2/apextier2.head.json

--- a/translations/texts/items/armors/apex/apex-tier2/apextier2.head.json
+++ b/translations/texts/items/armors/apex/apex-tier2/apextier2.head.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Rebel's Hood",
-      "Por": "Capuz de Rebelde"
+      "Por": "Capuz do Rebelde"
     }
   }
 ]
