Atualização translations/texts/items/armors/apex/apex-tier2/apextier2.legs.json

--- a/translations/texts/items/armors/apex/apex-tier2/apextier2.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier2/apextier2.legs.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Rebel's Trousers",
-      "Por": "Calças de Rebelde"
+      "Por": "Calças do Rebelde"
     }
   }
 ]
