--- a/translations/texts/items/armors/apex/apex-tier4/apextier4.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier4/apextier4.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Revolutionary's Jacket"
+      "Eng": "Revolutionary's Jacket",
+      "Por": "Casaco do Revolucionário"
     }
   }
 ]
