--- a/translations/texts/items/armors/apex/apex-tier4/apextier4.head.json
+++ b/translations/texts/items/armors/apex/apex-tier4/apextier4.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Revolutionary's Bandana"
+      "Eng": "Revolutionary's Bandana",
+      "Por": "Bandana do Revolucionário"
     }
   }
 ]
