--- a/translations/texts/items/armors/apex/apex-tier4/apextier4.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier4/apextier4.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Revolutionary's Trousers"
+      "Eng": "Revolutionary's Trousers",
+      "Por": "Calças do Revolucionário"
     }
   }
 ]
