--- a/translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rogue's Chestguard"
+      "Eng": "Rogue's Chestguard",
+      "Por": "Couraça do Ladino"
     }
   }
 ]
