--- a/translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.head.json
+++ b/translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rogue's Hood"
+      "Eng": "Rogue's Hood",
+      "Por": "Capuz do Ladino"
     }
   }
 ]
