Atualização translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.legs.json

--- a/translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier5accelerator/apextier5accelerator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rogue's Trousers"
+      "Eng": "Rogue's Trousers",
+      "Por": "Calças do Ladino"
     }
   }
 ]
