--- a/translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spy's Jacket"
+      "Eng": "Spy's Jacket",
+      "Por": "Casaco do Espião"
     }
   }
 ]
