Atualização translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.head.json

--- a/translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.head.json
+++ b/translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spy's Hood"
+      "Eng": "Spy's Hood",
+      "Por": "Capuz do Espião"
     }
   }
 ]
