--- a/translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier5manipulator/apextier5manipulator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spy's Trousers"
+      "Eng": "Spy's Trousers",
+      "Por": "Calças do Espião"
     }
   }
 ]
