--- a/translations/texts/items/armors/apex/apex-tier5separator/apextier5separator.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier5separator/apextier5separator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Assassin's Chestguard"
+      "Eng": "Assassin's Chestguard",
+      "Por": "Couraça do Assassino"
     }
   }
 ]
