--- a/translations/texts/items/armors/apex/apex-tier5separator/apextier5separator.head.json
+++ b/translations/texts/items/armors/apex/apex-tier5separator/apextier5separator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Assassin's Mask"
+      "Eng": "Assassin's Mask",
+      "Por": "Máscara do Assassino"
     }
   }
 ]
