--- a/translations/texts/items/armors/apex/apex-tier5separator/apextier5separator.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier5separator/apextier5separator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Assassin's Trousers"
+      "Eng": "Assassin's Trousers",
+      "Por": "Calças do Assassino"
     }
   }
 ]
