--- a/translations/texts/items/armors/apex/apex-tier6accelerator/apextier6accelerator.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier6accelerator/apextier6accelerator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Infiltrator's Breastplate"
+      "Eng": "Infiltrator's Breastplate",
+      "Por": "Peitoral do Infiltrador"
     }
   }
 ]
