--- a/translations/texts/items/armors/apex/apex-tier6accelerator/apextier6accelerator.head.json
+++ b/translations/texts/items/armors/apex/apex-tier6accelerator/apextier6accelerator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Infiltrator's Helm"
+      "Eng": "Infiltrator's Helm",
+      "Por": "Elmo do Infiltrador"
     }
   }
 ]
