--- a/translations/texts/items/armors/apex/apex-tier6accelerator/apextier6accelerator.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier6accelerator/apextier6accelerator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Infiltrator's Greaves"
+      "Eng": "Infiltrator's Greaves",
+      "Por": "Grevas do Infiltrador"
     }
   }
 ]
