Atualização translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.chest.json

--- a/translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Usurper's Coat"
+      "Eng": "Usurper's Coat",
+      "Por": "Casaco do Usurpador"
     }
   }
 ]
