--- a/translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.head.json
+++ b/translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Usurper's Hood"
+      "Eng": "Usurper's Hood",
+      "Por": "Capuz do Usurpador"
     }
   }
 ]
