--- a/translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier6manipulator/apextier6manipulator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Usurper's Trousers"
+      "Eng": "Usurper's Trousers",
+      "Por": "Calças do Usurpador"
     }
   }
 ]
