Atualização translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.chest.json

--- a/translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.chest.json
+++ b/translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frontliner's Breastplate"
+      "Eng": "Frontliner's Breastplate",
+      "Por": "Peitoral do Frontliner"
     }
   }
 ]
