Atualização translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.head.json

--- a/translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.head.json
+++ b/translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frontliner's Helm"
+      "Eng": "Frontliner's Helm",
+      "Por": "Elmo do Frontliner"
     }
   }
 ]
