--- a/translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.legs.json
+++ b/translations/texts/items/armors/apex/apex-tier6separator/apextier6separator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Frontliner's Greaves"
+      "Eng": "Frontliner's Greaves",
+      "Por": "Grevas do Frontliner"
     }
   }
 ]
