--- a/translations/texts/items/armors/apex/apexcommander/apexcommander.chest.json
+++ b/translations/texts/items/armors/apex/apexcommander/apexcommander.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Commander Jacket"
+      "Eng": "Commander Jacket",
+      "Por": "Jaqueta de Comandante"
     }
   }
 ]
