--- a/translations/texts/items/armors/apex/apexcommander/apexcommander.legs.json
+++ b/translations/texts/items/armors/apex/apexcommander/apexcommander.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Commander Trousers"
+      "Eng": "Commander Trousers",
+      "Por": "Calças de Comandante"
     }
   }
 ]
