Atualização translations/texts/items/armors/apex/apexnavy/apexnavy.chest.json

--- a/translations/texts/items/armors/apex/apexnavy/apexnavy.chest.json
+++ b/translations/texts/items/armors/apex/apexnavy/apexnavy.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Navy Jacket"
+      "Eng": "Navy Jacket",
+      "Por": "Jaqueta da Marinha"
     }
   }
 ]
