--- a/translations/texts/items/armors/apex/apexnavy/apexnavy.legs.json
+++ b/translations/texts/items/armors/apex/apexnavy/apexnavy.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Navy Trousers"
+      "Eng": "Navy Trousers",
+      "Por": "Calças da Marinha"
     }
   }
 ]
