Atualização translations/texts/items/armors/apex/apexofficer/apexofficer.chest.json

--- a/translations/texts/items/armors/apex/apexofficer/apexofficer.chest.json
+++ b/translations/texts/items/armors/apex/apexofficer/apexofficer.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Officer Jacket"
+      "Eng": "Officer Jacket",
+      "Por": "Jaqueta de Policial"
     }
   }
 ]
