--- a/translations/texts/items/armors/apex/apexofficer/apexofficer.legs.json
+++ b/translations/texts/items/armors/apex/apexofficer/apexofficer.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Officer Trousers"
+      "Eng": "Officer Trousers",
+      "Por": "Calças de Policial"
     }
   }
 ]
