--- a/translations/texts/items/armors/apex/apexspecialist/apexspecialist.chest.json
+++ b/translations/texts/items/armors/apex/apexspecialist/apexspecialist.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Specialist Jacket"
+      "Eng": "Specialist Jacket",
+      "Por": "Jaqueta de Especialista"
     }
   }
 ]
