--- a/translations/texts/items/armors/apex/apexspecialist/apexspecialist.legs.json
+++ b/translations/texts/items/armors/apex/apexspecialist/apexspecialist.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Specialist Trousers"
+      "Eng": "Specialist Trousers",
+      "Por": "Calças de Especialista"
     }
   }
 ]
