--- a/translations/texts/items/armors/avian/avian-adventurer/avianadventurer.chest.json
+++ b/translations/texts/items/armors/avian/avian-adventurer/avianadventurer.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Leather Breastplate"
+      "Eng": "Leather Breastplate",
+      "Por": "Peitoral de Couro"
     }
   }
 ]
