--- a/translations/texts/items/armors/avian/avian-adventurer/avianadventurer.legs.json
+++ b/translations/texts/items/armors/avian/avian-adventurer/avianadventurer.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Leather Loincloth"
+      "Eng": "Leather Loincloth",
+      "Por": "Tanga de Couro"
     }
   }
 ]
