--- a/translations/texts/items/armors/avian/avian-commoner/aviancommoner.chest.json
+++ b/translations/texts/items/armors/avian/avian-commoner/aviancommoner.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hide Shirt"
+      "Eng": "Hide Shirt",
+      "Por": "Camisa de Couro"
     }
   }
 ]
