--- a/translations/texts/items/armors/avian/avian-fancy/avianfancy.chest.json
+++ b/translations/texts/items/armors/avian/avian-fancy/avianfancy.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Shirt"
+      "Eng": "Ornate Shirt",
+      "Por": "Camisa Ornamentada"
     }
   }
 ]
