--- a/translations/texts/items/armors/avian/avian-fancy/avianfancy.legs.json
+++ b/translations/texts/items/armors/avian/avian-fancy/avianfancy.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ornate Loincloth"
+      "Eng": "Ornate Loincloth",
+      "Por": "Tanga Ornamentada"
     }
   }
 ]
