--- a/translations/texts/items/armors/avian/avian-tier1/aviantier1.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier1/aviantier1.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hatchling's Breastplate"
+      "Eng": "Hatchling's Breastplate",
+      "Por": "Peitoral do Filhote"
     }
   }
 ]
