Atualização translations/texts/items/armors/avian/avian-tier1/aviantier1.head.json

--- a/translations/texts/items/armors/avian/avian-tier1/aviantier1.head.json
+++ b/translations/texts/items/armors/avian/avian-tier1/aviantier1.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hatchling's Circlet"
+      "Eng": "Hatchling's Circlet",
+      "Por": "Diadema do Filhote"
     }
   }
 ]
