Atualização translations/texts/items/armors/avian/avian-tier1/aviantier1.legs.json

--- a/translations/texts/items/armors/avian/avian-tier1/aviantier1.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier1/aviantier1.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hatchling's Loincloth"
+      "Eng": "Hatchling's Loincloth",
+      "Por": "Tanga do Filhote"
     }
   }
 ]
