--- a/translations/texts/items/armors/avian/avian-tier2/aviantier2.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier2/aviantier2.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sparrow Breastplate"
+      "Eng": "Sparrow Breastplate",
+      "Por": "Peitoral do Pardal"
     }
   }
 ]
