--- a/translations/texts/items/armors/avian/avian-tier2/aviantier2.head.json
+++ b/translations/texts/items/armors/avian/avian-tier2/aviantier2.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sparrow Helm"
+      "Eng": "Sparrow Helm",
+      "Por": "Elmo do Pardal"
     }
   }
 ]
