--- a/translations/texts/items/armors/avian/avian-tier2/aviantier2.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier2/aviantier2.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sparrow Loincloth"
+      "Eng": "Sparrow Loincloth",
+      "Por": "Tanga do Pardal"
     }
   }
 ]
