--- a/translations/texts/items/armors/avian/avian-tier3/aviantier3.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier3/aviantier3.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Quail Breastplate"
+      "Eng": "Quail Breastplate",
+      "Por": "Peitoral da Codorna"
     }
   }
 ]
