--- a/translations/texts/items/armors/avian/avian-tier3/aviantier3.head.json
+++ b/translations/texts/items/armors/avian/avian-tier3/aviantier3.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Quail Crest"
+      "Eng": "Quail Crest",
+      "Por": "Elmo da Codorna"
     }
   }
 ]
