--- a/translations/texts/items/armors/avian/avian-tier3/aviantier3.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier3/aviantier3.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Quail Trousers"
+      "Eng": "Quail Trousers",
+      "Por": "Calças da Codorna"
     }
   }
 ]
