--- a/translations/texts/items/armors/avian/avian-tier4/aviantier4.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier4/aviantier4.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Owl Breastplate"
+      "Eng": "Owl Breastplate",
+      "Por": "Peitoral da Coruja"
     }
   }
 ]
