--- a/translations/texts/items/armors/avian/avian-tier5accelerator/aviantier5accelerator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier5accelerator/aviantier5accelerator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peacock Chestplate"
+      "Eng": "Peacock Chestplate",
+      "Por": "Peitoral do Pavão"
     }
   }
 ]
