Atualização translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.chest.json

--- a/translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flamingo Chainmail"
+      "Eng": "Flamingo Chainmail",
+      "Por": "Cota de Malha de Flamingo"
     }
   }
 ]
