Atualização translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.chest.json

--- a/translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Macaw Shirt"
+      "Eng": "Macaw Shirt",
+      "Por": "Camisa de Arara"
     }
   }
 ]
