Atualização translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.legs.json

--- a/translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Macaw Leggings"
+      "Eng": "Macaw Leggings",
+      "Por": "Perneiras de Arara"
     }
   }
 ]
