Atualização translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.legs.json

--- a/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Raven's Claws"
+      "Eng": "Raven's Claws",
+      "Por": "Garras do Corvo"
     }
   }
 ]
