Atualização translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.chest.json

--- a/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.chest.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Raven's Breast",
-      "Por": "Peitoral de Corvo"
+      "Por": "Peitoral do Corvo"
     }
   }
 ]
