Atualização translations/texts/items/armors/backerhats/demonhorns/demonhorns.head.json

--- a/translations/texts/items/armors/backerhats/demonhorns/demonhorns.head.json
+++ b/translations/texts/items/armors/backerhats/demonhorns/demonhorns.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Demon Horn Wig"
+      "Eng": "Demon Horn Wig",
+      "Por": "Peruca de Chifre de Demônio"
     }
   }
 ]
