Atualização translations/texts/items/armors/backerhats/dreadfulskull/dreadfulskull.head.json

--- a/translations/texts/items/armors/backerhats/dreadfulskull/dreadfulskull.head.json
+++ b/translations/texts/items/armors/backerhats/dreadfulskull/dreadfulskull.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Dreadful Skull"
+      "Eng": "Dreadful Skull",
+      "Por": "Crânio Medonho"
     }
   }
 ]
