Atualização translations/texts/items/armors/backerhats/electroniumhat/electroniumhat.head.json

--- a/translations/texts/items/armors/backerhats/electroniumhat/electroniumhat.head.json
+++ b/translations/texts/items/armors/backerhats/electroniumhat/electroniumhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Electronium Hat"
+      "Eng": "Electronium Hat",
+      "Por": "Chapéu Eletrônico"
     }
   }
 ]
