Atualização translations/texts/items/armors/backerhats/fancap/fancap.head.json

--- a/translations/texts/items/armors/backerhats/fancap/fancap.head.json
+++ b/translations/texts/items/armors/backerhats/fancap/fancap.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sporty Cap"
+      "Eng": "Sporty Cap",
+      "Por": "Boné Esportivo"
     }
   }
 ]
