Atualização translations/texts/items/armors/backerhats/glitchplague/plaguemaster.head.json

--- a/translations/texts/items/armors/backerhats/glitchplague/plaguemaster.head.json
+++ b/translations/texts/items/armors/backerhats/glitchplague/plaguemaster.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plague Master Mask"
+      "Eng": "Plague Master Mask",
+      "Por": "Máscara de Mestre da Praga"
     }
   }
 ]
