Atualização translations/texts/items/armors/backerhats/hothat/hothat.head.json

--- a/translations/texts/items/armors/backerhats/hothat/hothat.head.json
+++ b/translations/texts/items/armors/backerhats/hothat/hothat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Hot Top Hat"
+      "Eng": "Hot Top Hat",
+      "Por": "Cartola Quente"
     }
   }
 ]
