Atualização translations/texts/items/armors/backerhats/multicamhat/multicamhat.head.json

--- a/translations/texts/items/armors/backerhats/multicamhat/multicamhat.head.json
+++ b/translations/texts/items/armors/backerhats/multicamhat/multicamhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Multicam Operator Cap"
+      "Eng": "Multicam Operator Cap",
+      "Por": "Boné de Operator Multicam"
     }
   }
 ]
