Atualização translations/texts/items/armors/backerhats/soulguise/soulguise.head.json

--- a/translations/texts/items/armors/backerhats/soulguise/soulguise.head.json
+++ b/translations/texts/items/armors/backerhats/soulguise/soulguise.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Soul Guise Helmet"
+      "Eng": "Soul Guise Helmet",
+      "Por": "Capacete de Aspecto de Alma"
     }
   }
 ]
