Atualização translations/texts/items/armors/backerhats/uncathat/uncathat.head.json

--- a/translations/texts/items/armors/backerhats/uncathat/uncathat.head.json
+++ b/translations/texts/items/armors/backerhats/uncathat/uncathat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Un-Cat Hat"
+      "Eng": "The Un-Cat Hat",
+      "Por": "Chapéu de Gato"
     }
   }
 ]
