Atualização translations/texts/items/armors/backitems/baroncape/baroncape.back.json

--- a/translations/texts/items/armors/backitems/baroncape/baroncape.back.json
+++ b/translations/texts/items/armors/backitems/baroncape/baroncape.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Baron's Cape"
+      "Eng": "Baron's Cape",
+      "Por": "Capa do Barão"
     }
   }
 ]
