Atualização translations/texts/items/armors/backitems/batterypackAA/batterypackAA.back.json

--- a/translations/texts/items/armors/backitems/batterypackAA/batterypackAA.back.json
+++ b/translations/texts/items/armors/backitems/batterypackAA/batterypackAA.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "AA Battery Pack"
+      "Eng": "AA Battery Pack",
+      "Por": "Mochila de Pilha AA"
     }
   }
 ]
