Atualização translations/texts/items/armors/backitems/breathprotection/breathprotection.back.json

--- a/translations/texts/items/armors/backitems/breathprotection/breathprotection.back.json
+++ b/translations/texts/items/armors/backitems/breathprotection/breathprotection.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Breathing EPP"
+      "Eng": "Breathing EPP",
+      "Por": "EPP de Respiração"
     }
   }
 ]
