Atualização translations/texts/items/armors/backitems/coldprotection/coldprotection.back.json

--- a/translations/texts/items/armors/backitems/coldprotection/coldprotection.back.json
+++ b/translations/texts/items/armors/backitems/coldprotection/coldprotection.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Heating EPP Upgrade"
+      "Eng": "Heating EPP Upgrade",
+      "Por": "EPP Aprimorado de Aquecimento"
     }
   }
 ]
