Atualização translations/texts/items/armors/backitems/heatprotection/heatprotection.back.json

--- a/translations/texts/items/armors/backitems/heatprotection/heatprotection.back.json
+++ b/translations/texts/items/armors/backitems/heatprotection/heatprotection.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooling EPP Upgrade"
+      "Eng": "Cooling EPP Upgrade",
+      "Por": "EPP Aprimorado de Resfriamento"
     }
   }
 ]
