Atualização translations/texts/items/armors/backitems/radiationprotection/radiationprotection.back.json

--- a/translations/texts/items/armors/backitems/radiationprotection/radiationprotection.back.json
+++ b/translations/texts/items/armors/backitems/radiationprotection/radiationprotection.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Radiation EPP Upgrade"
+      "Eng": "Radiation EPP Upgrade",
+      "Por": "EPP Aprimorado de Radiação"
     }
   }
 ]
