Atualização translations/texts/items/armors/backitems/eye/eye.back.json

--- a/translations/texts/items/armors/backitems/eye/eye.back.json
+++ b/translations/texts/items/armors/backitems/eye/eye.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "All-Seeing Cape"
+      "Eng": "All-Seeing Cape",
+      "Por": "Capa que Tudo Vê"
     }
   }
 ]
