Atualização translations/texts/items/armors/backitems/guardwings/guardwings.png.back.json

--- a/translations/texts/items/armors/backitems/guardwings/guardwings.png.back.json
+++ b/translations/texts/items/armors/backitems/guardwings/guardwings.png.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stargazer Priest Wings"
+      "Eng": "Stargazer Priest Wings",
+      "Por": "Asas de Sacerdote Stargazer"
     }
   }
 ]
