Atualização translations/texts/items/armors/backitems/paperwings/paperwings.back.json

--- a/translations/texts/items/armors/backitems/paperwings/paperwings.back.json
+++ b/translations/texts/items/armors/backitems/paperwings/paperwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Paper Wings"
+      "Eng": "Paper Wings",
+      "Por": "Asas de Papel"
     }
   }
 ]
