Atualização translations/texts/items/armors/backitems/toxicflower/toxicflower.back.json

--- a/translations/texts/items/armors/backitems/toxicflower/toxicflower.back.json
+++ b/translations/texts/items/armors/backitems/toxicflower/toxicflower.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toxic Flower Backpack"
+      "Eng": "Toxic Flower Backpack",
+      "Por": "Mochila de Flor Tóxica"
     }
   }
 ]
