Atualização translations/texts/items/armors/backitems/tribalwings/tribalwings.back.json

--- a/translations/texts/items/armors/backitems/tribalwings/tribalwings.back.json
+++ b/translations/texts/items/armors/backitems/tribalwings/tribalwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stargazer Acolyte Wings"
+      "Eng": "Stargazer Acolyte Wings",
+      "Por": "Asas de Acólito Stargazer"
     }
   }
 ]
