Atualização translations/texts/items/armors/backitems/turtleshell/turtleshell.back.json

--- a/translations/texts/items/armors/backitems/turtleshell/turtleshell.back.json
+++ b/translations/texts/items/armors/backitems/turtleshell/turtleshell.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Turtle Shell"
+      "Eng": "Turtle Shell",
+      "Por": "Casco de Tartaruga"
     }
   }
 ]
