Atualização translations/texts/items/armors/backitems/xenonpack/xenonpack.back.json

--- a/translations/texts/items/armors/backitems/xenonpack/xenonpack.back.json
+++ b/translations/texts/items/armors/backitems/xenonpack/xenonpack.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Xenon Pack"
+      "Eng": "Xenon Pack",
+      "Por": "Mochila de Luz Xenon"
     }
   }
 ]
