Atualização translations/texts/items/armors/backitems/halogenpack/halogenpack.back.json

--- a/translations/texts/items/armors/backitems/halogenpack/halogenpack.back.json
+++ b/translations/texts/items/armors/backitems/halogenpack/halogenpack.back.json
@@ -8,7 +8,7 @@
     },
     "Texts": {
       "Eng": "Halogen Pack",
-      "Por": "Mochila Halogênica"
+      "Por": "Mochila de Luz Halogênica"
     }
   }
 ]
