Atualização translations/texts/items/armors/biome/Bioluminescence/lighthelm/lighthelm.head.json

--- a/translations/texts/items/armors/biome/Bioluminescence/lighthelm/lighthelm.head.json
+++ b/translations/texts/items/armors/biome/Bioluminescence/lighthelm/lighthelm.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fluorescent Helmet"
+      "Eng": "Fluorescent Helmet",
+      "Por": "Capacete Fluorescente"
     }
   }
 ]
