Atualização translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.chest.json

--- a/translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.chest.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alpaca Real Guard Torso"
+      "Eng": "Alpaca Real Guard Torso",
+      "Por": "Tronco de Alpaca Guarda Real"
     }
   }
 ]
