Atualização translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.head.json

--- a/translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.head.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alpaca Guard Real Head"
+      "Eng": "Alpaca Guard Real Head",
+      "Por": "Cabeça de Alpaca Guarda Real"
     }
   }
 ]
