Atualização translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.legs.json

--- a/translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.legs.json
+++ b/translations/texts/items/armors/biome/alpine/alpaca/alpacaguard/alpacaguard.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Alpaca Real Guard Legs"
+      "Eng": "Alpaca Real Guard Legs",
+      "Por": "Pernas de Alpaca Guarda Real"
     }
   }
 ]
